// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cmds:init initializes module 1`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'citext,plpgsql'
relocatable = false
superuser = false
"
`;

exports[`cmds:init initializes module: module-only - argv 1`] = `
{
  "_": [
    "init",
  ],
  "access": "public",
  "cwd": "<CWD>",
  "email": "tester@example.com",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "fromBranch": "main",
  "fullName": "Tester",
  "license": "MIT",
  "moduleDesc": "my-module",
  "moduleName": "my-module",
  "name": "my-module",
  "packageIdentifier": "my-module",
  "repo": "https://github.com/constructive-io/pgpm-boilerplates.git",
  "repoName": "my-module",
  "username": "tester",
}
`;

exports[`cmds:init initializes module: module-only - files 1`] = `
[
  "tsconfig.json",
  "pnpm-workspace.yaml",
  "pgpm.json",
  "package.json",
  "lerna.json",
  "README.md",
  "LICENSE",
  ".prettierrc.json",
  ".gitignore",
  ".eslintrc.json",
  "packages/my-module/pgpm.plan",
  "packages/my-module/package.json",
  "packages/my-module/my-module.control",
  "packages/my-module/jest.config.js",
  "packages/my-module/README.md",
  "packages/my-module/Makefile",
  "packages/my-module/LICENSE",
  "packages/my-module/__tests__/basic.test.ts",
  ".github/workflows/ci.yml",
  ".agents/skills/pgpm/SKILL.md",
  ".agents/skills/pgpm/references/workspace.md",
  ".agents/skills/pgpm/references/troubleshooting.md",
  ".agents/skills/pgpm/references/testing.md",
  ".agents/skills/pgpm/references/template-authoring.md",
  ".agents/skills/pgpm/references/starter-kits.md",
  ".agents/skills/pgpm/references/sql-conventions.md",
  ".agents/skills/pgpm/references/publishing.md",
  ".agents/skills/pgpm/references/plan-format.md",
  ".agents/skills/pgpm/references/pgpm-tables.md",
  ".agents/skills/pgpm/references/pgpm-export.md",
  ".agents/skills/pgpm/references/nextjs-app.md",
  ".agents/skills/pgpm/references/module-naming.md",
  ".agents/skills/pgpm/references/extensions.md",
  ".agents/skills/pgpm/references/environment-configuration.md",
  ".agents/skills/pgpm/references/env.md",
  ".agents/skills/pgpm/references/docker.md",
  ".agents/skills/pgpm/references/deploy-lifecycle.md",
  ".agents/skills/pgpm/references/dependencies.md",
  ".agents/skills/pgpm/references/cli.md",
  ".agents/skills/pgpm/references/ci-cd.md",
  ".agents/skills/pgpm/references/changes.md",
]
`;

exports[`cmds:init initializes module: module-only - result 1`] = `
{
  "_": [
    "init",
  ],
  "access": "public",
  "cwd": "<CWD>",
  "email": "tester@example.com",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "fromBranch": "main",
  "fullName": "Tester",
  "license": "MIT",
  "moduleDesc": "my-module",
  "moduleName": "my-module",
  "name": "my-module",
  "packageIdentifier": "my-module",
  "repo": "https://github.com/constructive-io/pgpm-boilerplates.git",
  "repoName": "my-module",
  "username": "tester",
}
`;

exports[`cmds:init initializes module: module-only - transformResults 1`] = `[]`;

exports[`cmds:init initializes module: module-only - writeResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - argv 1`] = `
{
  "_": [
    "init",
    "workspace",
  ],
  "access": "public",
  "cwd": "<CWD>",
  "email": "tester@example.com",
  "fromBranch": "main",
  "fullName": "Tester",
  "license": "MIT",
  "moduleDesc": "my-workspace",
  "moduleName": "starter-module",
  "name": "my-workspace",
  "packageIdentifier": "my-workspace",
  "repo": "https://github.com/constructive-io/pgpm-boilerplates.git",
  "repoName": "my-workspace",
  "username": "tester",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - files 1`] = `
[
  "my-workspace/tsconfig.json",
  "my-workspace/pnpm-workspace.yaml",
  "my-workspace/pgpm.json",
  "my-workspace/package.json",
  "my-workspace/lerna.json",
  "my-workspace/README.md",
  "my-workspace/LICENSE",
  "my-workspace/.prettierrc.json",
  "my-workspace/.gitignore",
  "my-workspace/.eslintrc.json",
  "my-workspace/.github/workflows/ci.yml",
  "my-workspace/.agents/skills/pgpm/SKILL.md",
  "my-workspace/.agents/skills/pgpm/references/workspace.md",
  "my-workspace/.agents/skills/pgpm/references/troubleshooting.md",
  "my-workspace/.agents/skills/pgpm/references/testing.md",
  "my-workspace/.agents/skills/pgpm/references/template-authoring.md",
  "my-workspace/.agents/skills/pgpm/references/starter-kits.md",
  "my-workspace/.agents/skills/pgpm/references/sql-conventions.md",
  "my-workspace/.agents/skills/pgpm/references/publishing.md",
  "my-workspace/.agents/skills/pgpm/references/plan-format.md",
  "my-workspace/.agents/skills/pgpm/references/pgpm-tables.md",
  "my-workspace/.agents/skills/pgpm/references/pgpm-export.md",
  "my-workspace/.agents/skills/pgpm/references/nextjs-app.md",
  "my-workspace/.agents/skills/pgpm/references/module-naming.md",
  "my-workspace/.agents/skills/pgpm/references/extensions.md",
  "my-workspace/.agents/skills/pgpm/references/environment-configuration.md",
  "my-workspace/.agents/skills/pgpm/references/env.md",
  "my-workspace/.agents/skills/pgpm/references/docker.md",
  "my-workspace/.agents/skills/pgpm/references/deploy-lifecycle.md",
  "my-workspace/.agents/skills/pgpm/references/dependencies.md",
  "my-workspace/.agents/skills/pgpm/references/cli.md",
  "my-workspace/.agents/skills/pgpm/references/ci-cd.md",
  "my-workspace/.agents/skills/pgpm/references/changes.md",
]
`;

exports[`cmds:init initializes workspace: workspace - result 1`] = `
{
  "_": [
    "init",
    "workspace",
  ],
  "access": "public",
  "cwd": "<CWD>",
  "email": "tester@example.com",
  "fromBranch": "main",
  "fullName": "Tester",
  "license": "MIT",
  "moduleDesc": "my-workspace",
  "moduleName": "starter-module",
  "name": "my-workspace",
  "packageIdentifier": "my-workspace",
  "repo": "https://github.com/constructive-io/pgpm-boilerplates.git",
  "repoName": "my-workspace",
  "username": "tester",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - transformResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - writeResults 1`] = `[]`;
